--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ rel="noopener noreferrer nofollow">info@devstudio.com</a>
     <main>
         <!--Hero section-->
 <section>
-<h1>Ефективні рішення для вашого бізнесу</h1>
+<h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
 <button type="button">Замовити послугу</button>
 </section>
 <!--Benefits section-->
