Adding width to photo

--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@ rel="noopener noreferrer nofollow">info@devstudio.com</a>
 <section>
     <h2>Наша команда</h2>
     <ul>
-        <li><img src="./images/Demyanenko.jpg" alt="Фото Ігора Дем'яненко">
+        <li><img src="./images/Demyanenko.jpg" alt="Фото Ігора Дем'яненко" width="270">
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
         </li>
-        <li><img src="./images/Repina.jpg" alt="Фото Ольги Репіної">
+        <li><img src="./images/Repina.jpg" alt="Фото Ольги Репіної" width="270">
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
         </li>
-        <li><img src="./images/Tarasov.jpg" alt="Фото Миколи Тарасова">
+        <li><img src="./images/Tarasov.jpg" alt="Фото Миколи Тарасова" width="270">
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
         </li>
-        <li><img src="./images/Ermakov.jpg" alt="Фото Михайло Єрмакова">
+        <li><img src="./images/Ermakov.jpg" alt="Фото Михайло Єрмакова" width="270">
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
         </li>
